Scene 3 with torchlight affect - o/s bug re alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@
     --s-color: #e64b18;
     --t-color: #602749;
     --l-color: #e6e2b3;
+
+    --cursorX: 50vw;
+    --cursorY: 50vh;
 }
 
 .large-text {
@@ -362,6 +365,12 @@ p#openingscene {
 
 
 /* Scene 3 */
+
+#S3-story-txt1 {
+    position: absolute;
+    top: 4vh;
+}
+
 .s3-main-img {
     background: url("/assets/images/office.jpeg");
     background-size: cover;
@@ -379,12 +388,13 @@ p#openingscene {
     left:0;
     bottom:0;
     right:0;
-    background-color:rgba(0, 0, 0, 0);
+    background-color:rgba(0, 0, 0, 0.98);
 }
 
 /*- cupboard -*/
 .hidden1 {
-    border:solid 5px red;
+    /*- border:solid 5px red;-*/
+    border: none;
     background-color:rgba(0, 0, 0, 0);
     width:5vw;
     height:10vh;
@@ -393,11 +403,14 @@ p#openingscene {
     left:30vw;
     bottom:0;
     right:0;
+    cursor: default;
+   
 }
 
 /*- bin -*/
 .hidden2 {
-    border:solid 5px blue;
+    /*- border:solid 5px blue;-*/
+    border: none;
     background-color:rgba(0, 0, 0, 0);
     width:5vw;
     height:10vh;
@@ -406,11 +419,13 @@ p#openingscene {
     left:45vw;
     bottom:0;
     right:0;
+    cursor: default;
 }
 
 /*- chair -*/
 .hidden3 {
-    border:solid 5px green;
+    /*- border:solid 5px green;-*/
+    border: none;
     background-color:rgba(0, 0, 0, 0);
     width:8vw;
     height:20vh;
@@ -419,11 +434,13 @@ p#openingscene {
     left:52vw;
     bottom:0;
     right:0;
+    cursor: default;
 }
 
 /*- desk -*/
 .hidden4 {
-    border:solid 5px yellow;
+    /*- border:solid 5px yellow;-*/
+    border: none;
     background-color:rgba(0, 0, 0, 0);
     width:20vw;
     height:20vh;
@@ -432,11 +449,13 @@ p#openingscene {
     left:24vw;
     bottom:0;
     right:0;
+    cursor: default;
 }
 
 /*- floor -*/
 .hidden5 {
-    border:solid 5px blueviolet;
+    /*- border:solid 5px blueviolet;-*/
+    border: none;
     background-color:rgba(0, 0, 0, 0);
     width:15vw;
     height:10vh;
@@ -445,28 +464,39 @@ p#openingscene {
     left:5vw;
     bottom:0;
     right:0;
+    cursor: default;
 }
 
 .torch {
-    cursor: none;
-    --cursorX: 50vw;
-    --cursorY: 50vh;
-  }
+    cursor: default;
+    
+}
 
 .torch:before {
     content: '';
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 75vw;
+    height: 40vh;
     position: fixed;
-    pointer-events: none;
     background: radial-gradient(
-      circle 10vmax at var(--cursorX) var(--cursorY),
+      circle 5vmax at var(--cursorX) var(--cursorY),
       rgba(0,0,0,0) 0%,
       rgba(0,0,0,.5) 80%,
       rgba(0,0,0,.95) 100%
     )
-  }
+}
+
+.s3-main-img:hover,
+#s3-img-overlay:hover, 
+.hidden1:hover,
+.hidden2:hover,
+.hidden3:hover,
+.hidden4:hover,
+.hidden5:hover {
+      cursor: default;
+}
+
+
 
 /* Scene 4 */
 
